2001-02-04  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_shell (tempfile): New function to generate random
	tempfile names.
	Call it where appropriate.	

2001-02-03  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_shell (privs_user, privs_mj): New functions to drop and
	regain permissions.

	Call them throughout the code where permissions were switched.

	Add permission-changing calls around all code that opens files
	specified on the command line.

	* lib/Mj/Parser.pm (parse_part): Note if we skipped any garbage at
	the end of the part.
	Fix minor bug where we said "Skipped 1 lines..."
	
2001-02-02  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* t/shell.t: Copy the mj_shell script and take out the 'use lib'
	line so that the tests won't use already-installed libraries.

2001-02-01  Michael Yount <csf@moscow.com>

	* Makefile.PL:  (check_nr_install) Test to see if installation
	as the majordomo user is feasible, and report any problems.

2001-01-31  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm, bin/mj_wwwusr:  Various cosmetic changes,
	plus the ability to include "domain=example.com" in the 
	path_info part of the URL, to make aliasing the URL easier.

2001-01-30  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (sync_owners): Set the override flag so that
        majordomo-owner is never sent mail.

2001-01-29  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm: (trigger)  Allow private files from a 
	list's file space to be parsed for commands.  The files
        must be specified in the list's "triggers" configuration
	setting, with names beginning with a forward slash.
	(configdef, configset, configshow)  Support a five-level
	password approach.  The ability to see or change a setting
	is based upon the kind of password used, and upon any changes
	to the default levels in the new config_access setting.
	(_list_file_get)  Remove GLOBAL from the default file search path.
